# unitone-agentgateway

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.acr  Dockerfile.app  Dockerfile.base  Dockerfile.fast  ENVIRONMENTS.md  LAYERED_BUILD.md  LICENSE  LOCAL_BUILD_DEPLOYMENT.md  LOCAL_DEV_TEST.md  Makefile  QUICK_START.md  README.md  agw  azure-config.yaml  build-and-push.sh  claude.md  demo_security_guards_config.yaml  deploy.sh  entrypoint.sh  package.json  setup.sh  test_security_fix.py  test_tool_poisoning.yaml
.github/: REBUILD_TRIGGER.txt  dependabot.yml
api/: handlers.py
configs/: atlassian_mcp_config.yaml  benchmark_guards.yaml  demo_mcp_config.yaml  demo_mcp_config_with_server_spoofing.yaml  figma_mcp_config.yaml  notion_mcp_config.yaml  wasm_guard_demo.yaml
docs/: AUTHENTICATION.md  BUILD_OPTIONS.md  CICD_OPTIONS.md  CONFIG_HOT_RELOAD.md  DEPLOYMENT.md  DEVELOPER_WORKFLOW.md  DOCUMENTATION_INDEX.md  E2E_TEST_GUIDE.md  FAST_BUILD.md  NEW_ENGINEER_GUIDE.md  PRODUCTION_SETUP.md  SECURITY_GUARDS.md  STICKY_SESSIONS.md  UNITONE_BRANDING_CHANGES.md  UNITONE_USER_MENU_FEATURE.md
examples/: config.yaml
guards/python-guards/server-spoofing-guard/: .gitignore  README.md  pyproject.toml
guards/python-guards/server-spoofing-guard-wasm/: .gitignore  README.md  app.py  build.sh  pyproject.toml
guards/python-guards/server-spoofing-guard-wasm/tests/: __init__.py  test_wasm_component.py
guards/python-guards/server-spoofing-guard-wasm/wit/: guard.wit
guards/python-guards/server-spoofing-guard/src/server_spoofing_guard/: __init__.py  guard.py  models.py
guards/python-guards/server-spoofing-guard/tests/: __init__.py  conftest.py  test_guard.py
guards/rust-guards/prompt-injection-guard-wasm/: Cargo.toml  build.sh  prompt_injection_guard.wasm
guards/rust-guards/prompt-injection-guard-wasm/src/: config.rs  lib.rs  patterns.rs  schema.rs  scoring.rs
guards/rust-guards/prompt-injection-guard-wasm/wit/: guard.wit
guards/rust-guards/server-spoofing-guard-wasm/: Cargo.toml  build.sh
guards/rust-guards/server-spoofing-guard-wasm/src/: config.rs  fingerprint.rs  levenshtein.rs  lib.rs  mimicry.rs  schema.rs  state.rs  typosquat.rs
guards/rust-guards/server-spoofing-guard-wasm/wit/: guard.wit
scripts/: build-and-deploy.sh  build-layered.sh  build-on-vm.sh  cleanup-old-images.sh  deploy-test-servers.sh  fast-build.sh  setup-build-machine.sh  setup-build-vm.sh  update-config.sh  validate-config.sh
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
tests/: README.md  benchmark.py  benchmark_guards.py  e2e_mcp_sse_test.py  e2e_pii_guard_test.py  e2e_rug_pull_guard_test.py  (+4 more)
testservers/: .dockerignore  Dockerfile  Dockerfile.tool-poisoning  Dockerfile.unified  README.md  pyproject.toml  start-server.sh  start-servers.sh
testservers/src/mcp_test_server/: __init__.py  fastmcp_server.py  schemas.py
testservers/src/mcp_test_server/fixtures/: __init__.py  datasets.py
testservers/src/mcp_test_server/generators/: __init__.py  base.py  financial.py  identity.py  personal.py  web.py
testservers/src/rug_pull_test/: __init__.py  server.py
testservers/src/tool_poisoning_test/: __init__.py  server.py
(+33 files in other folders)
