[project]
name = "mcp-test-server"
version = "0.1.0"
description = "MCP server for generating PII test data"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.1",
    "faker>=28.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.1.0",
]

[project.scripts]
mcp-test-server-fastmcp = "mcp_test_server.fastmcp_server:main"
tool-poisoning-test = "tool_poisoning_test.server:main"
rug-pull-test = "rug_pull_test.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_test_server", "src/tool_poisoning_test", "src/rug_pull_test"]
