[project]
name = "server-spoofing-guard"
version = "0.1.0"
description = "MCP Security Guard for Server Spoofing Detection & Whitelisting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "python-Levenshtein>=0.21.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server_spoofing_guard"]
